--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 	</style>
 </head>
    <body>
-      <form class= "new" action = "http://localhost:5000/result" method = "POST">
+      <form class= "new" action = "http://ibmappendly.herokuapp.com/result" method = "POST">
          <p><h2>Topic: </h2> 
          	<input align="center" type = "text" name = "Name"/>
          </p>
