--- a/templates/index.html
+++ b/templates/index.html
@@ -47,10 +47,10 @@
    <body>
       <form class= "new" action = "http://ibmappendly.herokuapp.com/result" method = "POST">
          <p><h2>Topic: </h2> 
-         	<input align="center" type = "text" name = "Name"/>
+         	<input align="center" placeholder="e.g JavaScript, Python" type = "text" name = "Name"/>
          </p>
          <p><h2>Problem: </h2>
-         	<input align="center" type = "text" name = "Name2"> 
+         	<input align="center" placeholder="404 error in Python" type = "text" name = "Name2"> 
          </p>
          <p><input align="right" type= "submit" value = "submit"/></p>
          <p>{{ output }}</p>
