--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
 	</style>
 </head>
    <body>
+   		<center><img src="http://www.auplod.com/u/apduolb8d88.png"/></center>
       <form class= "new" action = "http://ibmappendly.herokuapp.com/result" method = "POST">
          <p><h2>Topic: </h2> 
          	<input align="center" placeholder="e.g JavaScript, Python" type = "text" name = "Name"/>
