--- a/templates/index.html
+++ b/templates/index.html
@@ -36,13 +36,13 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Name is required">
 					<span class="label-input100">Enter Topic</span>
-					<input class="input100" type="text" name="Name" placeholder="Enter topic">
+					<input class="input100" type="text" name="Name" placeholder="e.g JavaScript">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100 validate-input" data-validate="Name is required">
 					<span class="label-input100">Search Query</span>
-					<input class="input100" type="text" name="Name2" placeholder="Enter the Query">
+					<input class="input100" type="text" name="Name2" placeholder="window.open() JavaScript">
 					<span class="focus-input100"></span>
 				</div>
 
