--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Name is required">
 					<span class="label-input100">Enter Topic</span>
-					<input class="input100" type="text" name="Name" placeholder="e.g JavaScript">
+					<input class="input100" type="text" name="Name" placeholder="e.g. JavaScript">
 					<span class="focus-input100"></span>
 				</div>
 
