--- a/templates/index.html
+++ b/templates/index.html
@@ -29,20 +29,20 @@
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form" action = "http://ibmappendly.herokuapp.com/result" method = "POST">
+			<form class="contact100-form validate-form" action = "/result" method = "POST">
 				<span class="contact100-form-title">
 					ELI5 StackOverflow
 				</span>
 
 				<div class="wrap-input100 validate-input" data-validate="Name is required">
 					<span class="label-input100">Enter Topic</span>
-					<input class="input100" type="text" name="Name" placeholder="e.g. JavaScript">
+					<input class="input100" type="text" name="Name" placeholder="Enter topic">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100 validate-input" data-validate="Name is required">
 					<span class="label-input100">Search Query</span>
-					<input class="input100" type="text" name="Name2" placeholder="window.open() JavaScript">
+					<input class="input100" type="text" name="Name2" placeholder="Enter the Query">
 					<span class="focus-input100"></span>
 				</div>
 
@@ -57,7 +57,19 @@
 						</button>
 					</div>
 				</div>
-				<div><p>{{ output }}</p></div>
+				<div>
+					<p>
+						<br><b>QUESTION</b><br>
+						{{ question }}
+						</p>
+					<p>
+						<br><b>ANSWER</b><br>
+						{{ answer.1 }}
+					</p>
+					<p>
+						<br>{{ answer.2 }}
+					</p>
+				</div>
 			</form>
 		</div>
 	</div>
