--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact V4</title>
+	<title>IBM Hack Challenge | Team Appendly</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -67,7 +67,7 @@
 						{{ answer.1 }}
 					</p>
 					<p>
-						<br>{{ answer.2 }}
+						<br><b>{{ answer.2 }}</b>
 					</p>
 				</div>
 			</form>
