--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
 						<br><b>ANSWER</b><br>
 						{{ answer.1 }}
 					</p>
-					<p>
+					<a href={{answer.2}}>
 						<br><b>{{ answer.2 }}</b>
 					</p>
 				</div>
